<resources>
    <string name="app_name">Pricycle App</string>
    <string name="todo">todo</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="error">Error</string>
    <string name="sign_out">Sign out</string>
    <string name="alarm">Alarm!</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="create">Create</string>
    <string name="please_enter_your_name">Please Enter your name</string>
    <string name="please_enter_your_last_name">Please Enter your last name</string>
    <string name="please_enter_your_phone">Please Enter your phone number</string>
    <string name="please_choose_pick_up_date">Please choose pick up date</string>
    <string name="please_choose_pick_up_time">Please choose pick up time</string>

    <string name="create_successfully">Create successfully</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="create_reyclerbin">Create Recyclebin</string>
    <string name="no_location">Location is a mandatory field!</string>
    <string name="select_recycle_type">Please select recycle bin type</string>
    <string name="distance_is">"Your far from the recycle bin about %1$.2fm</string>
    <string name="full_name">Full name</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="send">Send</string>
    <string name="choode_pick_up_time">Choose pick up time</string>
    <string name="please_enter_full_name">Please enter your full name</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_pick_up_time">Please enter ypur pick up time</string>
    <string name="show_pickups_requests">Show Pickups Requests</string>
    <string name="request_pickup">Request Pick Up</string>
    <string name="requets">Requests</string>
    <string name="approve">I want to pick up!</string>
    <string name="my_profile">My Profile</string>
    <string name="update_your_account_details">Update Your Account Details</string>
    <string name="please_wait">Please wait...</string>
    <string name="my_created_orders">My Created requests</string>
    <string name="my_pick_up">My Pick up requests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_hour">Select Hour</string>
    <string name="select_data">Select Date</string>
    <string name="profile_is_updated_successfully">Profile updated successfully</string>
    <string name="cancle">Cancle</string>
    <string name="find_your_recycle_bin">Find your recycle bin</string>
    <string name="you_have_to_pick_up_alarm">You have to pick up the order of %1$s about 10 min</string>
    <string name="pick_up_alarm">Pick up alarm!</string>
    <string name="pay_attention">Pay Attention!</string>
    <string name="notificationError">"You will no recieve any notifications about pick ups alert "</string>
    <string name="forget_password">Forget password? Please click here.</string>
    <string name="reset_success">Please check you inbox to complete reset process.</string>
    <string name="reset">Reset</string>
    <string name="please_enter_email">Please enter your email account</string>
    <string name="hello_name">Hello, %1$s</string>
</resources>